--- a/bar-beer-drinker-ui/src/app/beerslist/beerslist.component.html
+++ b/bar-beer-drinker-ui/src/app/beerslist/beerslist.component.html
@@ -1,7 +1,6 @@
 <div class="jumbotron jumbotron-fluid">
     <div class="container">
-      <h1 class="display-4">Welcome to Bar Beer Drinker!</h1>
-      <p class="lead">This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>
+      <h1 class="display-4">Beers</h1>
     </div>
   </div>
 
