--- a/bar-beer-drinker-ui/src/app/beerslist/beerslist.component.html
+++ b/bar-beer-drinker-ui/src/app/beerslist/beerslist.component.html
@@ -1,6 +1,7 @@
 <div class="jumbotron jumbotron-fluid">
     <div class="container">
       <h1 class="display-4">Beers</h1>
+      <p class="lead">Select a beer below to see some advanced statistics and analytics about it.</p>
     </div>
   </div>
 
@@ -9,7 +10,7 @@
         <ng-template pTemplate="header">
             <tr>
               <th>Name</th>
-              <th>Manf</th>
+              <th>Manufacturer</th>
             </tr>
         </ng-template>
         <ng-template pTemplate="body" let-beer>
