--- a/bar-beer-drinker-ui/src/app/app.component.html
+++ b/bar-beer-drinker-ui/src/app/app.component.html
@@ -6,17 +6,17 @@
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="#">Bars <span class="sr-only">(current)</span></a>
+      <li class="nav-item" routerLinkActive="active">
+        <a class="nav-link" routerLink="/bars">Bars <span class="sr-only">(current) </span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Drinkers</a>
+        <a class="nav-link" href="#">Drinkers </a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/beers">Beers</a>
+      <li class="nav-item" routerLinkActive="active">
+        <a class="nav-link" routerLink="/beers">Beers </a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link disabled" href="#">Disabled</a>
+      <li class="nav-item" routerLinkActive="active">
+        <a class="nav-link" routerLink="/manfs">Manufacturers</a>
       </li>
     </ul>
     <form class="form-inline my-2 my-lg-0">
