--- a/bar-beer-drinker-ui/src/app/welcome/welcome.component.html
+++ b/bar-beer-drinker-ui/src/app/welcome/welcome.component.html
@@ -1,7 +1,7 @@
 <div class="jumbotron jumbotron-fluid">
   <div class="container">
     <h1 class="display-4">Welcome to Bar Beer Drinker!</h1>
-    <p class="lead">This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>
+    <p class="lead">Select a bar below to see some advanced statistics and analytics about it.</p>
   </div>
 </div>
 
