added bar graph for bar

--- a/bar-beer-drinker-ui/src/app/bar-details/bar-details.component.html
+++ b/bar-beer-drinker-ui/src/app/bar-details/bar-details.component.html
@@ -26,3 +26,14 @@
   <p-dropdown class = "float-right text-left" *ngIf="filterOptions" [options]="filterOptions"  (onChange)="sortBy($event.value)"></p-dropdown>
   <div id = "bargraph2"></div>
 </div>
+
+<div>
+  <br>
+  <p-dropdown class = "float-right text-left" *ngIf="filterOptions2" [options]="filterOptions2"  (onChange)="sortByTime($event.value)"></p-dropdown>
+  <div id = "bargraph3"></div>
+</div>
+
+<div>
+  <br>
+  <div id = "bargraph4"></div>
+</div>
