--- a/bar-beer-drinker-ui/src/app/welcome/welcome.component.html
+++ b/bar-beer-drinker-ui/src/app/welcome/welcome.component.html
@@ -1,7 +1,9 @@
 <div class="jumbotron jumbotron-fluid">
   <div class="container">
     <h1 class="display-4">Welcome to BarBeerDrinker!</h1>
-    <p class="lead">Select a bar below to see some advanced statistics and analytics about it.</p>
+    <p class="lead">Select a bar below to see some advanced statistics and analytics about it.
+    </p>
+      <a class="nav-link" routerLink="/barsAnalytics">Bar Analytics</a>
   </div>
 </div>
 
