--- a/bar-beer-drinker-ui/src/app/app.component.html
+++ b/bar-beer-drinker-ui/src/app/app.component.html
@@ -18,6 +18,15 @@
       <li class="nav-item" routerLinkActive="active">
         <a class="nav-link" routerLink="/manfs">Manufacturers</a>
       </li>
+            <li class="nav-item" routerLinkActive="active">
+        <a class="nav-link" routerLink="/bartenders">Bartenders</a>
+      </li>
+      <li class="nav-item" routerLinkActive="active">
+        <a class="nav-link" routerLink="/modification">Modify</a>
+      </li>
+      <li class="nav-item" routerLinkActive="active">
+        <a class="nav-link" routerLink="/sqlquery">SQLQuery</a>
+      </li>
     </ul>
     <form class="form-inline my-2 my-lg-0">
       <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
