--- a/bar-beer-drinker-ui/src/app/app.component.html
+++ b/bar-beer-drinker-ui/src/app/app.component.html
@@ -9,8 +9,8 @@
       <li class="nav-item" routerLinkActive="active">
         <a class="nav-link" routerLink="/bars">Bars <span class="sr-only">(current) </span></a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Drinkers </a>
+      <li class="nav-item" routerLinkActive="active">
+        <a class="nav-link" routerLink="/drinkers">Drinkers</a>
       </li>
       <li class="nav-item" routerLinkActive="active">
         <a class="nav-link" routerLink="/beers">Beers </a>
