--- a/bar-beer-drinker-ui/src/app/drinker-details/drinker-details.component.html
+++ b/bar-beer-drinker-ui/src/app/drinker-details/drinker-details.component.html
@@ -1,22 +1,37 @@
-
 <div class="jumbotron jumbotron-fluid">
   <div class="container">
       <h1 class="display-4">{{ drinkerName }}</h1>
-      <p class="drinker-details" *ngIf="drinkerDetails"> 
-         Phone {{ drinkerDetails?.phone }}<span *ngIf="drinkerDetails.phone"></span>
-         p{{ drinkerDetails?.phone }}
-         n{{ drinkerName }}
-         a{{ drinkerDetails?.addr }}
-      </p>
   </div>
 </div>
 
-<div>
+<div class="container">
+    <a>Transactions</a>
+    <br>
+  <p-table [value]="transacts">
+    <ng-template pTemplate="header">
+        <tr>
+          <th>Barsname</th>
+          <th>Transaction ID</th>
+          <th>Time</th>
+        </tr>
+    </ng-template>
+    <ng-template pTemplate="body" let-transact>
+        <tr>
+          <td>{{transact.Barsname}}</td>
+          <td>{{transact.BillstransactionID}}</td>
+          <td>{{transact.timet}}</td>
+        </tr>
+    </ng-template>
+  </p-table>
+</div>
+
+<div class="container">
   <br>
   <div id = "bargraph"></div>
 </div>
 
-<div>
+<div class="container">
+    <p-dropdown [options]="weeks" [(ngModel)]="selectedWeek" (onChange)="onChange($event)" class="float-left text-left" [style]="{'width':'200px'}"></p-dropdown>
     <br>
     <div id = "bargraph2"></div>
   </div>
